--- a/css/biz2/main.css
+++ b/css/biz2/main.css
@@ -77,11 +77,11 @@
 .good {background: url('../../images/biz2/quiz_icon_good.png') no-repeat;}
 
 /* 레이어 팝업 */
-.layer-pop { display: none; position: fixed; left: 0; top: 0; right: 0; bottom: 0; background: rgba(0, 0, 0, 0.5); }
+.layer-pop { display: none; position: fixed; left: 0; top: 0; right: 0; bottom: 0; background: rgba(0, 0, 0, 0.5); z-index: 1000;}
 .layer-pop.on { display: block; }
 .layer-pop.simple-type .layer-content { width: 606px; }
 .layer-pop.simple-type .layer-content .layer-scroll { padding: 60px 118px; background: #fff; }
-.layer-pop .layer-content { overflow: hidden; position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%); max-width: var(--max-width, 100%); width: 100%;}
+.layer-pop .layer-content { overflow: hidden; position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%); max-width: var(--max-width, 100%); width: 100%; box-shadow: 0px 6px 16px rgba(15, 21, 34, 0.06);}
 .layer-pop .layer-content .layer-scroll { overflow-y: auto; position: relative; max-height: calc(100vh - 40px); padding: 60px; background: #FFF; border-radius: 20px;}
 .layer-pop .layer-content .layer-scroll > .title { display: block; position: relative; font-size: 24px; text-align: center; font-weight: 700;}
 .layer-pop .layer-content .layer-scroll .desc {color: var(--text-sub-33);}
@@ -178,9 +178,9 @@
 
 /* 가로형 테이블 스타일 */
 .com-write-table table { width: 100%; border-top: 1px solid var(--gray-30-d8)}
-.com-write-table table th { height: 80px; background: var(--gray-05-f8);  border-bottom: 1px solid var(--gray-30-d8); font-weight: bold; padding-left: 30px;}
+.com-write-table table th {background: var(--gray-05-f8);  border-bottom: 1px solid var(--gray-30-d8); font-weight: bold; padding-left: 30px;}
 .com-write-table table th:last-child { border-right: 0;}
-.com-write-table table td { height: 80px; padding: 13px 20px; border-right: 1px solid var(--gray-30-d8); border-bottom: 1px solid var(--gray-30-d8); font-weight: 500; text-align: left;}
+.com-write-table table td {padding: 13px 20px; border-right: 1px solid var(--gray-30-d8); border-bottom: 1px solid var(--gray-30-d8); font-weight: 500; text-align: left;}
 .com-write-table table td:last-child { border-right: 0; }
 
 .com-write-table table td .input-item { display: flex; align-items: center; margin-top: 20px; }
@@ -228,12 +228,12 @@
 .com-write-table .notice-info-area + .table-bottom-info { margin-top: 24px; }
 
 /* pagination styling */
-.com-paging { display: flex; justify-content: center; align-items: center; column-gap: 10px; margin-top: 40px; }
-.com-paging button { width: 34px; height: 34px; font-size: 18px; font-weight: 500; color: #333333; vertical-align: middle;}
+.com-paging { display: flex; justify-content: center; align-items: center; column-gap: 8px; margin-top: 40px; }
+.com-paging button { width: 40px; height: 40px; font-size: 18px; font-weight: 500; color: #666666; vertical-align: middle;}
 .com-paging button.on { background: #00b3be; border-radius: 6px; color: #fff; }
-.com-paging button.prev { width: 60px; font-size: 18px; font-weight: 500; line-height: 36px; color: var(--text-third-66); padding-left: 20px; letter-spacing: -1px; background: url(../../images/biz2/paging_arrow_left.png) no-repeat 0 9px; }
-.com-paging button.next { width: 60px; font-size: 18px; font-weight: 500; line-height: 36px; color: var(--text-third-66); padding: 0 20px 0 0; letter-spacing: -1px; background: url(../../images/biz2/paging_arrow_right.png) no-repeat right 9px; }
-.com-paging .empty { width: 34px; height: 34px; font-size: 18px; font-weight: 500; color: #333333; text-align: center; }
+.com-paging button.prev { width: 60px; font-size: 18px; font-weight: 500; line-height: 40px; color: var(--text-primary-00); padding-left: 20px;  background: url(../../images/biz2/paging_arrow_left.png) no-repeat 0 9px; }
+.com-paging button.next { width: 60px; font-size: 18px; font-weight: 500; line-height: 40px; color: var(--text-primary-00); padding: 0 20px 0 0; background: url(../../images/biz2/paging_arrow_right.png) no-repeat right 9px; }
+.com-paging .empty { width: 40px; height: 40px; font-size: 18px; font-weight: 500; color: #333333; text-align: center; }
 
 /* main page styling */
 .main .container {padding-top: 0; padding-bottom: 0;}      
