--- a/css/biz2/mo.css
+++ b/css/biz2/mo.css
@@ -19,6 +19,7 @@
 	.fixed-quick{right:-50px}
 	.main-cont {justify-content: flex-start; gap: 20px;}
 	.main-info-right {width: 260px;}
+	.more-link-area > a {font-size: 23px;}
 }
 
 @media only screen and (max-width:1440px){
@@ -41,6 +42,7 @@
 	.main-counseling-card{padding:16px}
 	.main-counseling-detail > h5{font-size:20px}
 	.main-counseling-detail > .main-counseling-num{font-size:20px}
+	.more-link-area > a {font-size: 23px;}
 }
 
 @media only screen and (max-width:1080px){
@@ -156,10 +158,7 @@
 	footer .info-content address > span{font-size:16px}
 	footer .info-content .link-area .link-box{flex-wrap:wrap;row-gap:12px;column-gap:24px}
 	footer .info-content .family-select-wrap{position:static;margin-bottom:20px}
-	footer .info-content .family-select-lg > button{width:100%;font-size:18px;height:40px;padding:0 8px;background:#fff url(../../images/biz2/ic_arrow_big.png) no-repeat right 8px center}
-	footer .info-content .family-select-lg > button.is-open{background:#fff url(../../images/biz2/ic_arrow_big_top.png) no-repeat right 8px center}
-	footer .info-content .family-select-lg .family-site-list > li > a{font-size:16px;line-height:56px}
-	footer .info-content .footer-logo{width:90px;height:24px;background-size:cover}
+	footer .info-content .family-select-lg > button{width:100%;}
 
 	/* 페이지네이션 공통 */
 	.com-paging{gap:6.4px;padding:0 9.2px}
