--- a/css/biz2/mo.css
+++ b/css/biz2/mo.css
@@ -49,6 +49,9 @@
 	/* 임시 보고용 구분 텍스트 */
 	.temp-page-txt {display: none;} 
 
+	/* html */
+	html {width: 100%;}
+
 	/* LMP_001 지자체 메인 상단 */
 	.main-cont{flex-direction:column}
 	.main-info-left{width:100%}
