--- a/css/biz2/reset.css
+++ b/css/biz2/reset.css
@@ -37,7 +37,7 @@ font-weight: 700;
 	-moz-osx-font-smoothing: grayscale;
 }
 
-body {overflow-x: hidden; font-weight: 500;}
+body {overflow-x: hidden; font-weight: 500; width: 100%;}
 i {display: inline-block;}
 
 * {-webkit-text-size-adjust: none; box-sizing: border-box;}
