--- a/css/biz2/reset.css
+++ b/css/biz2/reset.css
@@ -37,7 +37,9 @@ font-weight: 700;
 	-moz-osx-font-smoothing: grayscale;
 }
 
-body {overflow-x: hidden; font-weight: 500; width: 100%;}
+
+body {overflow-x: hidden; font-weight: 500;}
+body * { outline: 1px solid red;}
 i {display: inline-block;}
 
 * {-webkit-text-size-adjust: none; box-sizing: border-box;}
