--- a/css/biz2/reset.css
+++ b/css/biz2/reset.css
@@ -200,6 +200,8 @@ legend {
 }
 
 html {
+	overflow: hidden;
+	overflow-y: scroll;
 	font-family: "KoPubDotum", sans-serif;
 	font-weight: 300;
 	font-size: 16px;
