--- a/css/biz2/reset.css
+++ b/css/biz2/reset.css
@@ -204,7 +204,9 @@ html {
 	font-weight: 300;
 	font-size: 16px;
 	line-height: 1.5;
-	color: var(--text-primary-00);	
+	color: var(--text-primary-00);
+	overflow: hidden;
+	overflow-y: scroll;
 }
 
 html input {
